bitfields/tests/compile_error_cases/errors/array_fields/array_field_array_backed_too_few_bits.rs
use bitfields::bitfield;

#[bitfield([u8; 4])]
pub struct Bitfield {
    a: [u8; 2],
}

fn main() {}

